--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- 
+  <!--
     normalize.css removes cross-browser differences in defaults, e.g.,
     differences in how form elements appear between Firefox and IE
     See: http://necolas.github.com/normalize.css/
@@ -15,9 +15,20 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/js/application.js"></script>
 
-  <title></title>
+  <title>Brewcation</title>
 </head>
 <body>
+  <h1>Brewcation</h1>
+  <div align="right">
+    <% if logged_in? %>
+        <a href="/users/<%=current_user.id%>"><%=current_user.username.capitalize%></a> |
+        <a href="/logout">Logout</a> |
+    <% else %>
+        <a href="/login">Login</a> |
+        <a href="/users/new">Register</a> |
+    <% end %>
+        <a href="/">Homepage</a>
+  </div>
   <%= yield %>
 </body>
 </html>
